<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bj"
            android:text="@string/bj"
            android:textSize="30dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sh"
            android:text="@string/sh"
            android:textSize="30dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/heb"
            android:text="@string/heb"
            android:textSize="30dp"/>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gz"
            android:text="@string/gz"
            android:textSize="30dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cc"
            android:text="@string/cc"
            android:textSize="30dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sy"
            android:text="@string/sy"
            android:textSize="30dp"/>

    </LinearLayout>

    <WebView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:id="@+id/webView1"
        android:focusable="false"
        android:layout_weight="1"/>

</LinearLayout>
